<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_channel_profile_key"
        android:summaryOff="@string/pref_channel_profile_summary_off"
        android:summaryOn="@string/pref_channel_profile_summary_on"
        android:title="@string/pref_channel_profile_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="@string/pref_channel_profile_key"
        android:key="@string/pref_client_role_key"
        android:summaryOff="@string/pref_client_role_summary_off"
        android:summaryOn="@string/pref_client_role_summary_on"
        android:title="@string/pref_client_role_title" />
</PreferenceScreen>