<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="3"
        android:entries="@array/pref_gather_and_play_list_titles"
        android:entryValues="@array/pref_list_values_4"
        android:key="@string/pref_gather_and_play_list_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_gather_and_play_list_title" />

    <ListPreference
        android:defaultValue="@string/pref_sampling_rate_list_default_value"
        android:entryValues="@array/pref_sampling_rate_list_values"
        android:key="@string/pref_sampling_rate_list_key"
        android:entries="@array/pref_sampling_rate_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_sampling_rate_list_title" />

</PreferenceScreen>