<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/progress_of_music_playing"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/text_default_progress"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/music_playing_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_of_music_to_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/label_choose_music_to_play"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" />

            <ImageView
                android:id="@+id/btn_stop_play"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/icon_play_stop" />

            <ImageView
                android:id="@+id/btn_start_pause_play"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_play_play" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/label_volume_type_music"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/icon_volume_min" />

            <SeekBar
                android:id="@+id/set_music_volume_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:max="100"
                android:progress="100" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_volume_max" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/label_volume_type_mic"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/icon_volume_min" />

            <SeekBar
                android:id="@+id/set_mic_volume_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:max="400"
                android:progress="400" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_volume_max" />

        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/popup_window_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp" />

</LinearLayout>
